Fixed some mistakes

--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "crossCode-skilltree-editor",
-  "version": "0.0.1",
-  "description": "A skilltree editor for CrossCode",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron ."
-  },
-  "repository": "",
-  "keywords": [
-    "Electron",
-    "CrossCode",
-    "Editor",
-    "Skilltree"
-  ],
-  "author": "Coffee",
-  "license": "MIT",
-  "devDependencies": {},
-  "dependencies": {
-	"electron": "^3.0.7"
-  }
+	"name": "some-text-rpg",
+	"version": "0.0.1",
+	"description": "A text rpg game",
+	"main": "main.js",
+	"scripts": {
+		"start": "electron ."
+	},
+	"repository": "",
+	"keywords": [
+		"Electron",
+		"Game",
+		"RPG",
+		"TextRPG",
+		"WIP"
+	],
+	"author": "Coffee",
+	"license": "MIT",
+	"devDependencies": {},
+	"dependencies": {
+		"@types/nw.gui": "0.0.20",
+		"coffeescript": "^2.3.2",
+		"electron": "^3.0.7",
+		"remote": "^0.2.6"
+	}
 }
