--- a/assets/config.json
+++ b/assets/config.json
@@ -1,4 +1,3 @@
 {
-	"testProperty": "of object",
-	"devTools": true
+	"assetsPath": "C:/Program Files (x86)/Steam/steamapps/common/CrossCode/assets/"
 }
